tests/kiama/negative/name_errors/L4/4_recordname1.ob
MODULE recordname1;

TYPE
    arecord1 = RECORD x : INTEGER; x : INTEGER END;

END recordname1.
